--- a/bootstrap/html/index.htm
+++ b/bootstrap/html/index.htm
@@ -50,16 +50,16 @@
             <a class="nav-link text-danger" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-danger" href="#">Services</a>
+            <a class="nav-link text-danger" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-danger" href="#">Beauty Tips</a>
+            <a class="nav-link text-danger" href="#productsection">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-danger" href="#">Makeup Tips</a>
+            <a class="nav-link text-danger" href="#dailytips">Makeup Tips</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-danger" href="#">About</a>
+            <a class="nav-link text-danger" href="#aboutus">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-danger" href="#contactus">Contact</a>
@@ -71,14 +71,15 @@
       </div>
     </div>
   </nav>
-  <section id="contentSection" class="d-flex flex-column align-items-center justify-content-center w-100 h-100 py-5" style="background-image: url('../images/pngtree-beauty-makeup-3d-black-mascara-cosmetics-pink-background-picture-image_1177356.jpg'); background-repeat: no-repeat; background-size: cover; height: 500px;">
-    <p id="content" class="text-center mb-3">
-      Get to know various ways of taking care of your beauty and face through having on the appropriate makeups
+  <section id="ContentSection" style="background-image: url('../../images/pngtree-beauty-makeup-3d-black-mascara-cosmetics-pink-background-picture-image_1177356.jpg'); background-size: cover; height: 800px; background-repeat: no-repeat;" class="d-flex flex-column justify-content-center align-items-center text-center text-white">
+    <p id="content" class="mb-4 text-black">
+      Get to know various ways of taking care of your beauty and face through
+      having on the appropriate makeups
     </p>
-    <button id="inTouch" class="btn btn-primary" style="background-color: rgb(230, 156, 168); border: none;">Get in touch</button>
+    <button id="inTouch" class="btn btn-danger">Get in touch</button>
   </section>
   
-  <div class="container py-5 bg-light">
+  <div class="container py-5 bg-light" id="services">
     <h2 class="text-center text-dark mb-4">Our Services</h2>
     <div class="row justify-content-center">
       <div class="col-lg-4 col-md-6 mb-4">
@@ -104,7 +105,7 @@
     </div>
   </div>
 
-  <div class="container py-5 no-scrollbar">
+  <div class="container py-5 no-scrollbar" id="dailytips">
     <h2 class="text-center text-dark mb-4">Makeup Tips</h2>
     <div class="row justify-content-center">
       <div class="col-md-4 col-lg-3 mb-4">
