--- a/tailwindcss/index.htm
+++ b/tailwindcss/index.htm
@@ -37,33 +37,36 @@
       </button>
       <div class="hidden lg:flex lg:items-center lg:space-x-4  flex-wrap">
         <a class="text-red-300" href="#">Home</a>
-        <a class="text-red-300" href="#">Services</a>
-        <a class="text-red-300" href="#">Beauty Tips</a>
-        <a class="text-red-300" href="#">Makeup Tips</a>
-        <a class="text-red-300" href="#">About</a>
+        <a class="text-red-300" href="#services">Services</a>
+        <a class="text-red-300" href="#productsection">Products</a>
+        <a class="text-red-300" href="#dailytips">Makeup Tips</a>
+        <a class="text-red-300" href="#aboutus">About</a>
         <a class="text-red-300" href="#contact">Contact</a>
         <button class="border- border-red-300  text-red-300 py-2 px-4 rounded w-30 h-10 bg-white">Get Started</button>
       </div>
     </div>
     <div class="hidden lg:flex lg:items-center lg:space-x-4 px-6 lg:px-0" id="navbar-links">
       <a class="text-red-500 block lg:hidden py-2" href="#">Home</a>
-      <a class="text-red-500 block lg:hidden py-2" href="#">Services</a>
-      <a class="text-red-500 block lg:hidden py-2" href="#">Beauty Tips</a>
-      <a class="text-red-500 block lg:hidden py-2" href="#">Makeup Tips</a>
-      <a class="text-red-500 block lg:hidden py-2" href="#">About</a>
+      <a class="text-red-500 block lg:hidden py-2" href="#services">Services</a>
+      <a class="text-red-500 block lg:hidden py-2" href="#productsection">Products</a>
+      <a class="text-red-500 block lg:hidden py-2" href="#dailytips">Makeup Tips</a>
+      <a class="text-red-500 block lg:hidden py-2" href="#aboutus">About</a>
       <a class="text-red-500 block lg:hidden py-2" href="#contact">Contact</a>
       <a class="btn btn-outline-danger border border-red-300 text-red-300 py-2 px-4 rounded block lg:hidden" href="#" role="button">Get Started</a>
     </div>
   </nav>
-  <section id="contentSection" class="flex flex-col items-center justify-center w-full h-128 bg-cover bg-center py-10" style="background-image: url('../../images/pngtree-beauty-makeup-3d-black-mascara-cosmetics-pink-background-picture-image_1177356.jpg');">
-    <p id="content" class="text-center mb-4">
-      Get to know various ways of taking care of your beauty and face through having on the appropriate makeups
-    </p>
-    <button id="inTouch" class="bg-pink-400 text-white py-2 px-4 rounded">Get in touch</button>
+  <section id="ContentSection" style="background-image: url('../images/pngtree-beauty-makeup-3d-black-mascara-cosmetics-pink-background-picture-image_1177356.jpg'); background-size: cover; height: 800px; background-repeat: no-repeat;" class="relative flex flex-col justify-center items-center">
+    <div class="absolute inset-0 "></div>
+    <div class="relative text-center">
+      <p id="content" class="text-black mb-4">
+        Get to know various ways of taking care of your beauty and face through
+        having on the appropriate makeups
+      </p>
+      <button id="inTouch" class="bg-red-300 text-white px-4 py-2">Get in touch</button>
+    </div>
   </section>
   
-  
-  <div class="container mx-auto py-12 bg-gray-100">
+  <div class="container mx-auto py-12 bg-gray-100" id="services">
     <h2 class="text-center text-2xl font-semibold mb-8">Our Services</h2>
     <div class="flex flex-wrap justify-center">
       <div class="w-full lg:w-1/3 md:w-1/2 px-4 mb-8">
@@ -89,7 +92,7 @@
     </div>
   </div>
 
-  <div class="container mx-auto py-12 no-scrollbar">
+  <div class="container mx-auto py-12 no-scrollbar" id="dailytips">
     <h2 class="text-center text-2xl font-semibold mb-8">Makeup Tips</h2>
     <div class="tipsSection flex flex-wrap justify-center items-center gap-5">
       <div class="makeuptips w-80 h-96 text-center bg-white shadow-md p-5 text-sm">
